<resources>
    <string name="app_name">UNDUH</string>
    <string name="signin">Sign In</string>
    <string name="image">image</string>
    <string name="password">Password</string>
    <string name="Emali">E-mali</string>
    <string name="signup"><u>Sign Up</u></string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="username">User Name</string>
    <string name="conformpassword">Conform Password</string>
    <string name="submit">SUBMIT</string>
    <string name="genres">GENRES</string>
    <string name="rap"><u>RAP</u></string>
    <string name="world"><u>WORLD</u></string>
    <string name="german_pop"><u>GERMAN POP</u></string>
    <string name="gospel"><u>GOSPEL</u></string>
    <string name="title_activity_home">Home</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="top100">TOP 100</string>
    <string name="totalduration">4.30</string>
    <string name="curruntduration">0.00</string>
    <string name="kept">KEPT</string>
    <string name="space">SPACE..</string>
    <string name="mywork">MYWORK</string>
    <string name="search">Search...</string>
    <string name="sub_mit">SUBMIT</string>
    settings
    <string name="settings">SETTINGS</string>


</resources>
