<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">

    <Space
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/logo"
        android:contentDescription="@string/image" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_login_form"
        android:hint="@string/Emali"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="32dp"
        android:inputType="textPassword"
        android:background="@drawable/edittext_login_form"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_login_form"
        android:text="@string/signin"
        android:onClick="Gotohome"

        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textsignup"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:inputType="textPersonName"
        android:onClick="signup"
        android:text="@string/signup"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/background_light"
        android:textStyle="bold" />

    <TextView

        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="10dp"
        android:inputType="textPersonName"
        android:onClick="gotosignup"
        android:text="@string/forgot_password"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:textStyle="bold" />


</LinearLayout>