<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="70dp" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/logo"
            android:contentDescription="@string/image" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/edittext_login_form"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorAccent" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_login_form"
            android:hint="@string/Emali"
            android:inputType="textPassword"
            android:textColorHint="@color/colorAccent" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_login_form"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/colorAccent" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_login_form"
            android:hint="@string/conformpassword"
            android:inputType="textPassword"
            android:textColorHint="@color/colorAccent" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />


            <Button
                android:id="@+id/btnsubmit"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="left"
                android:layout_marginTop="1dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/button_login_form"
                android:text="@string/submit"
                android:textColor="@color/white" />

        <Button
            android:id="@+id/btngenres"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginTop="-40dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_login_form"
            android:onClick="show"
            android:text="@string/genres"
            android:textColor="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/t1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_login_form"
            android:gravity="center"
            android:soundEffectsEnabled="true"
            android:text="@string/rap"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/t2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_login_form"
            android:gravity="center"
            android:text="@string/german_pop"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/t3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_login_form"
            android:gravity="center"
            android:text="@string/world"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/t4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_login_form"
            android:gravity="center"
            android:text="@string/gospel"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/t5"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_login_form"
            android:gravity="center"
            android:text="@string/rap"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/t6"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_login_form"
            android:gravity="center"
            android:text="@string/german_pop"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/t7"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_login_form"
            android:gravity="center"
            android:text="@string/world"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/t8"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_login_form"
            android:gravity="center"
            android:text="@string/rap"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="invisible" />


    </LinearLayout>


</ScrollView>