<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/home_background">

    <!-- Player Header -->
    <LinearLayout
        android:id="@+id/player_header_bg"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/home_background"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <!-- Playlist button -->
        <Button
            android:id="@+id/btnPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button_login_form"
            android:text="@string/top100"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/btn_kept"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button_login_form"
            android:text="@string/kept"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_mywork"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button_login_form"
            android:gravity="center"
            android:textSize="12dp"
            android:text="@string/mywork"
            android:textColor="@color/white" />


    </LinearLayout>

    <!-- Song Thumbnail Image -->
    <LinearLayout
        android:id="@+id/songThumbnail"
        android:layout_width="fill_parent"
        android:layout_height="270dp"
        android:layout_below="@id/player_header_bg"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/coverphoto" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="310dp"
        android:gravity="center">
        <!-- Song Title -->
        <TextView
            android:id="@+id/songTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/text_backcolor"
            android:ellipsize="marquee"
            android:gravity="top"
            android:paddingLeft="10dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="ADHAARU ADHARU SONG |YEANAI ARINDHAAL..."
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18dp" />"

    </LinearLayout>

    <!-- Player Footer -->
    <LinearLayout
        android:id="@+id/player_footer_bg"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="400dp"

        android:background="@drawable/home_background"
        android:gravity="center">


        <!-- Player Buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/text_backcolor"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
            <!-- Previous Button -->
            <ImageButton
                android:id="@+id/btnRepeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/btn_repeat" />
            <!-- Backward Button -->
            <ImageButton
                android:id="@+id/btnBackward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/btn_backward" />
            <!-- Play Button -->
            <ImageButton
                android:id="@+id/btnPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/btn_play" />
            <!-- Forward Button -->
            <ImageButton
                android:id="@+id/btnForward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/forward_button" />
            <!-- Next Button -->
            <ImageButton
                android:id="@+id/btnShuffle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/btn_shuffle" />

        </LinearLayout>

    </LinearLayout>


    <!-- Progress Bar/Seek bar -->
    <SeekBar
        android:id="@+id/songProgressBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/player_footer_bg"
        android:layout_marginBottom="-400dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:progressDrawable="@drawable/seekbar_progress"
        android:thumb="@drawable/thumb" />


    <!-- Timer Display -->
    <LinearLayout
        android:id="@+id/timerDisplay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/songProgressBar"

        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <!-- Current Duration Label -->
        <TextView
            android:id="@+id/songCurrentDurationLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/curruntduration"
            android:textColor="@color/lightgray"
            android:textStyle="bold" />
        <!-- Total Duration Label -->
        <TextView
            android:id="@+id/songTotalDurationLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/totalduration"
            android:textColor="@color/lightgray"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>